# buf

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  buf.config.template.toml  commitlint.config.js  package.json
.cargo/: config.toml
src/: buffer_api.rs  cli.rs  config.rs  env.rs  envelope.rs  error.rs  main.rs  tool_registry.rs
src/commands/: channels.rs  config.rs  health.rs  mod.rs  posts.rs  tools.rs
src/media/: image.rs  input.rs  mod.rs  pipeline.rs  profile.rs  video.rs
src/storage/: config.rs  mod.rs  service.rs  types.rs
src/storage/providers/: cloudflare_r2.rs  mod.rs
tests/: cli_contract.rs
