[package]
name = "buf"
version = "0.0.1"
edition = "2024"
license = "MIT"
rust-version = "1.94.0"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
